welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:12: error: missing arguments for method estBord in class Diagonal;
follow this method with `_' if you want to treat it as a partially applied function
      while (!estBord) {x=x-1;y=y-1}
              ^Diagonal:31: error: reassignment to val
  return ((x==x2)||(y==y2)||(x==0)||(y=0))
                                      ^